// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadPresets array form 1`] = `
Object {
  "plugins": Array [
    Array [
      "@docusaurus/plugin-content-docs",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": Array [],
}
`;

exports[`loadPresets array form composite 1`] = `
Object {
  "plugins": Array [
    Array [
      "@docusaurus/plugin-content-docs",
      Object {
        "path": "../",
      },
    ],
    Array [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-content-pages",
      Object {
        "path": "../",
      },
    ],
    Array [
      "@docusaurus/plugin-sitemap",
      undefined,
    ],
  ],
  "themes": Array [],
}
`;

exports[`loadPresets array form with options 1`] = `
Object {
  "plugins": Array [
    Array [
      "@docusaurus/plugin-content-docs",
      Object {
        "path": "../",
      },
    ],
    Array [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": Array [],
}
`;

exports[`loadPresets mixed form 1`] = `
Object {
  "plugins": Array [
    Array [
      "@docusaurus/plugin-content-docs",
      Object {
        "path": "../",
      },
    ],
    Array [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-content-pages",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-sitemap",
      undefined,
    ],
  ],
  "themes": Array [],
}
`;

exports[`loadPresets mixed form with themes 1`] = `
Object {
  "plugins": Array [
    Array [
      "@docusaurus/plugin-content-docs",
      Object {
        "path": "../",
      },
    ],
    Array [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-content-pages",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-sitemap",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-test",
      undefined,
    ],
  ],
  "themes": Array [
    Array [
      "@docusaurus/theme-classic",
      undefined,
    ],
  ],
}
`;

exports[`loadPresets string form 1`] = `
Object {
  "plugins": Array [
    Array [
      "@docusaurus/plugin-content-docs",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
  ],
  "themes": Array [],
}
`;

exports[`loadPresets string form composite 1`] = `
Object {
  "plugins": Array [
    Array [
      "@docusaurus/plugin-content-docs",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-content-blog",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-content-pages",
      undefined,
    ],
    Array [
      "@docusaurus/plugin-sitemap",
      undefined,
    ],
  ],
  "themes": Array [],
}
`;
